Fix: user's avatar in the user page wasn't aligned properly

--- a/template/css/style.scss
+++ b/template/css/style.scss
@@ -423,6 +423,8 @@ body {
       width: 144px;
       height: 144px;
       border-radius: 50%;
+      object-fit: cover;
+      object-position: center center;
     }
 
     .user-comment {
